Add components for showing latest images

--- a/helm/pose-estimation-s3-latest-image-web/templates/nginx-cm.yaml
+++ b/helm/pose-estimation-s3-latest-image-web/templates/nginx-cm.yaml
@@ -26,7 +26,10 @@ data:
 
           {{- if .Values.develop.enabled}}
           location / {
-            proxy_pass      http://0.0.0.0:3000;
+            proxy_pass http://0.0.0.0:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "Upgrade";
           }
           {{- else }}
           root /app/build;
